--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-
+DATABASE_URL=postgres://web:pass@localhost:5432/subscriptions_db?sslmode=disable
 POSTGRES_USER=web
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=subscriptions_db
